--- a/nodejs/importacion CFDIs/package.json
+++ b/nodejs/importacion CFDIs/package.json
@@ -16,8 +16,9 @@
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "esm": ">=3.1.0",
     "istanbul": "^0.4.5",
-    "nyc": "^13.1.0"
+    "nyc": "^14.1.1"
   },
   "ava": {
     "failFast": true,
